--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,30 +1,30 @@
 @font-face{
     font-family: 'Quicksand';
     font-weight: bold;
-    src: url('./Quicksand-Bold.ttf')
+    src: url('../../asserts/fonts/Quicksand-Bold.ttf')
 }
 @font-face{
     font-family: 'Quicksand';
     font-weight: normal;
-    src: url('./Quicksand-Regular.ttf')
+    src: url('../../asserts/fonts/Quicksand-Regular.ttf')
 }
 
 @font-face{
     font-family: 'Poppins';
     font-weight: bold;
-    src: url('./Poppins-Bold.ttf')
+    src: url('../../asserts/fonts/Poppins-Bold.ttf')
 }
 @font-face{
     font-family: 'Poppins';
     font-weight: normal;
-    src: url('./Poppins-Regular.ttf')
+    src: url('../../asserts/fonts/Poppins-Regular.ttf')
 }
 
 
 body {
     line-height: 1;
     margin: 0px;
-    background-image: url('./fondo.png');
+    background-image: url('../../asserts/images/cover.png');
     background-position-y: 0px;
     background-size: contain;
     background-repeat: no-repeat;
@@ -90,7 +90,6 @@ body {
     margin-bottom: 1%;
     font-family: 'Poppins';
     font-weight: normal;
-    src: url('./Poppins-Regular.ttf')
 }
 
 .title1 {
@@ -101,7 +100,6 @@ body {
     margin-bottom: 1%;
     font-family: 'Poppins';
     font-weight: normal;
-    src: url('./Poppins-Regular.ttf')
 }
 
 .title2 {
@@ -112,7 +110,6 @@ body {
     margin-bottom: 1%;
     font-family: 'Poppins';
     font-weight: normal;
-    src: url('./Poppins-Regular.ttf')
 }
 
 .title3 {
@@ -120,7 +117,6 @@ body {
     font-size: 3vw;
     font-family: 'Poppins';
     font-weight: bold;
-    src: url('./Poppins-Bold.ttf')
 }
 
 .summary {
