--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -9,13 +9,8 @@
     src: url('../../asserts/fonts/Poppins-Regular.ttf')
 }
 
-body {
-    margin: 0;
-    padding: 0;
-}
-
-.img {
-    height: 10vw;
+#footer .img {
+        height: 10vw;
 }
 
 #footer {
