--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -22,12 +22,12 @@
 
 .form{
     line-height: 1;
-    margin: 100px;
+    margin-top: 100px;
     background-image: url('../../asserts/images/cover.png');
-    background-position-y: 0px;
+    background-position-y: 100px;
     background-size: contain;
     background-repeat: no-repeat;
-    opacity: 0.5;                             /*afecta a la opacidad del contenedor*/
+    opacity: 1;                             /*afecta a la opacidad del contenedor*/
 
     #main_container {
         border:none;
@@ -152,5 +152,6 @@
     font-size: 1.2vw;
     margin-top: 60%;
     font-family: 'Poppins';
-    font-weight: normal;
+    font-weight: bold;
+    color:#5D5D5D;
 }
