--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -23,73 +23,11 @@
 .form{
     line-height: 1;
     margin-top: 100px;
-    background-image: url('../../asserts/images/cover.png');
+    background-image: url('../../asserts/images/Estación esquí 40op.png');
     background-position-y: 100px;
     background-size: contain;
     background-repeat: no-repeat;
     opacity: 1;                             /*afecta a la opacidad del contenedor*/
-
-    #main_container {
-        border:none;
-        background-color: #F0F0F0;
-    }
-
-    .cover {
-        border: none;
-        width: 100%;
-        position: relative;
-    }
-
-    .cover img {
-        width: 100%;
-        position: absolute;
-    }
-
-    #cover {
-        z-index: 1;
-    }
-
-    #logo {
-        width: auto;
-        max-width: 10vw;
-        height: auto;
-        display: block;
-        z-index: 2;
-        padding-top: 8vw;
-        padding-bottom: 20vw;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    #cont1 {
-        margin: 0px;
-        padding-top: 3%;
-        width: 100%;
-        background-color: #F0F0F0;
-        padding-left: 5%;
-        float: left;
-        line-height: 1;
-        position: absolute;
-    }
-
-    .line {
-        background-color: #36A9E1;
-        height: 0.2vw;
-        width: 30%;
-        display: inline-block;
-        margin-top: 0%;
-        margin-bottom: 5%;
-    }
-
-    .title1 {
-        font-size: 1.2vw;
-        padding-bottom: 0%;
-        margin-top: 10%;
-        margin-right: 400px;
-        margin-bottom: 1%;
-        font-family: 'Poppins';
-        font-weight: normal;
-    }
 
     .Aro {
         float: left;
@@ -131,4 +69,14 @@
     font-family: 'Poppins';
     font-weight: bold;
     color:#5D5D5D;
+}
+
+.titlecontacta {
+    font-size: 1.2vw;
+    padding-bottom: 0%;
+    margin-top: 6.5%;
+    margin-right: 400px;
+    margin-bottom: 1%;
+    font-family: 'Poppins';
+    font-weight: normal;
 }
