--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -23,7 +23,7 @@
 .form{
     line-height: 1;
     margin-top: 100px;
-    background-image: url('../../asserts/images/Estación esquí 40op.png');
+    background-image: url('../../asserts/images/Estacionesqui40op.png');
     background-position-y: 100px;
     background-size: contain;
     background-repeat: no-repeat;
