social networks en el footer

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -19,4 +19,11 @@
     width: 100%;
     padding: 0;
     margin: 0;
+
+    .socialNetworks {
+        width: 3vw;
+        padding-top: 2vw;
+        padding-right: 1vw;
+    }
+
 }
