--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -169,4 +169,9 @@
         margin-top: -1vw;
         margin-right: -0.5vw;
     }
+
+    .dropdown  {
+        margin-top: 2vw;
+        right: 0;
+    }
 }
