--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -20,12 +20,25 @@
     src: url('../../asserts/fonts/Poppins-Regular.ttf')
 }
 
+
+
 .form{
-    line-height: 1;
     background-image: url('../../asserts/images/Estacionesqui40op.png');
     background-size: contain;
     background-repeat: no-repeat;
-    opacity: 1;                             /*afecta a la opacidad del contenedor*/
+
+    form{
+        width: 80%;
+    }
+    
+    .row {
+        padding-left: 5vw;
+        padding-top: 5vw;
+        padding-right: 5vw;
+        font-family: Poppins;
+        font-size: bold;
+        align-content: center;
+    }
 
     .button1 {
         background-color: #36A9E1; /* Blue */
@@ -61,20 +74,20 @@
         color:#5D5D5D;
     }
     
-    .titlecontacta {
-        font-size: 1.2vw;
-        padding-bottom: 0%;
-        margin-top: 6.5%;
-        margin-right: 400px;
-        margin-bottom: 1%;
-        font-family: 'Poppins';
-        font-weight: normal;
-    }
+    // .titlecontacta {
+    //     font-size: 1.2vw;
+    //     padding-bottom: 0%;
+    //     margin-top: 6.5%;
+    //     margin-right: 400px;
+    //     margin-bottom: 1%;
+    //     font-family: 'Poppins';
+    //     font-weight: normal;
+    // }
 
-    .Aro {
-        float: left;
-        margin-left: 5%;
-        margin-top: 4%;
-        height: 4.2vw;
-    }
+    // .Aro {
+    //     float: left;
+    //     margin-left: 5%;
+    //     margin-top: 4%;
+    //     height: 4.2vw;
+    // }
 }
