--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -56,6 +56,7 @@
         font-weight: bold;
         margin-left: 80%;
         margin-top: 2%;
+        margin-bottom: 0;
     }
     
     .Flecha {
