--- a/src/components/about_us/about_us.scss
+++ b/src/components/about_us/about_us.scss
@@ -2,11 +2,11 @@
     font-family: 'Quicksand';
     src:    url('../../asserts/fonts/Quicksand_Bold.otf'),
             url('../../asserts/fonts/Quicksand_Bold_Oblique.otf'),
-            url('../../asserts/fonts/Quicksand_Book.otf'), 
-            url('../../asserts/fonts/Quicksand_Book_Oblique.otf'), 
+            url('../../asserts/fonts/Quicksand_Book.otf'),
+            url('../../asserts/fonts/Quicksand_Book_Oblique.otf'),
             url('../../asserts/fonts/Quicksand_Dash.otf'),
             url('../../asserts/fonts/Quicksand_Light.otf'),
-            url('../../asserts/fonts/Quicksand_Light_Oblique.otf');    
+            url('../../asserts/fonts/Quicksand_Light_Oblique.otf');
 }
 
 @font-face{
@@ -22,10 +22,10 @@
 
 .aboutUs{
     background-image: none;
-    font-family: Quicksand;
-    
+    font-family: 'Quicksand';
+
     .background-grey{
-        background-image: url(../../asserts/images/about_us_background_40.png);
+        background-image: url('../../asserts/images/about_us_background_40.png');
     }
 
     .col{
@@ -33,11 +33,14 @@
     }
 
     .row{
-        padding: 2em 4em;
+        padding-right: 3vw;
+        padding-left: 3vw;
     }
 
     .ourTeam{
         text-align: center;
+        padding-top: 3vw;
+        padding-bottom: 3vw;
     }
 
     img{
@@ -51,7 +54,7 @@
 
     .top-text {
         font-size: 10pt;
-        font-family: Poppins;
+        font-family: 'Poppins';
         font-weight: bold;
         color:#5D5D5D;
     }
