--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -24,7 +24,7 @@
 
 .form{
     background-image: url('../../asserts/images/Estacionesqui40op.png');
-    background-size: contain;
+    background-size: auto;
     background-repeat: no-repeat;
 
     form{
