--- a/src/components/politicas/politicas.scss
+++ b/src/components/politicas/politicas.scss
@@ -38,7 +38,7 @@
             font-size: 5vw;
         }
     }
-    .text {
+    .cont_text {
         background-color: #F2EFEF;
         padding-left: 15vw;
         padding-right: 15vw;
@@ -48,6 +48,11 @@
         .title {
             font-size: 1.5vw;
             font-weight: 600;
+        }
+
+        .text {
+            padding: 0;
+            font-weight: normal;
         }
     }
 }
