espacio imagenes aboutus

--- a/src/components/about_us/about_us.scss
+++ b/src/components/about_us/about_us.scss
@@ -43,6 +43,10 @@
         padding-bottom: 3vw;
     }
 
+    .espacio {
+        padding-bottom: 4%;
+      }
+
     img{
         margin-bottom: 2em;
     }
