--- a/src/components/about_us/about_us.scss
+++ b/src/components/about_us/about_us.scss
@@ -51,6 +51,10 @@
         margin-bottom: 2em;
     }
 
+    .img_desc {
+        height: 23rem;
+    }
+
     .arrow-img{
         vertical-align: top;
         margin: 0;
