modificada la posición del render de la tarjeta

--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -210,6 +210,16 @@
         font-size: bold;
     }
 
+    .left-text{
+        background: #FFFFFF;
+        padding-left: 0vw;
+        padding-top: 5vw;
+        padding-bottom: 5vw;;
+        line-height: 1;
+        font-family: 'Poppins';
+        font-size: bold;
+    }
+
     .blue {
         background: #36A9E1;
         padding-left: 5vw;
